--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,14 @@
 <html>
 
 <head>
-  <title>Express</title>
+  <title>Wuzzup</title>
   <link rel="stylesheet" href="/stylesheets/style.css">
+  <script src="javascripts/index.js"></script>
 </head>
 
 <body>
-  <h1>Express</h1>
-  <p>Welcome to Express</p>
+  <h1>Main page</h1>
+  
 </body>
 
 </html>
