--- a/public/register.html
+++ b/public/register.html
@@ -11,7 +11,7 @@
 <body>
   <h1>Registration page</h1>
   <p>  Email:<input type="email" placeholder="Enter Email" id="email"> Password:<input type="password" placeholder="Enter password" id="password"></p>
-  <button id="submit"> Submit</button>
+  <input type="submit"> Submit</button>
 </body>
 
 </html>
