--- a/public/login.html
+++ b/public/login.html
@@ -10,9 +10,10 @@
 
 <body>
   <h1>Login page</h1>
-  <p>  Email:<input type="email" placeholder="Enter Email" id="email"> Password:<input type="password" placeholder="Enter password" id="password">
-    <input type="submit">submit </p>
-  <button id="login"> Login</button>
+  <p>  Email:<input type="email" placeholder="Enter Email" id="email">
+     Password:<input type="password" placeholder="Enter password" id="password">
+  <input type="submit" value="Login" id="login"> </p>
+  
 </body>
 
 </html>
