--- a/public/user.html
+++ b/public/user.html
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+  
   <nav class="nav-wrapper red darken-2"></navclass>
     <div class="container">
       <a href="/" onclick="setCurrectPage()">Web Applications forum</a>
@@ -26,15 +27,15 @@
         <i class="material-icons">menu</i>
       </a>
       <ul class="right hide-on-med-and-down">
-        <li><a id="Logout">Logout</a></li>
+        <li id="logout"><a onclick="logout()" href="http://localhost:1234/">Logout</a></li>
       </ul>
     </div>
   </nav>
 
   <ul class="sidenav" id="mobile-links">
-    <li><a id="Logout">Logout</a></li>
+    <li id="logout"><a onclick="logout()" href="http://localhost:1234/">Logout</a></li>
   </ul>
-
+  <h1>Profile page</h1>
   <div>
     <div class="container" id="container">
     
